--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "npmcheckversion": "node ./internals/scripts/npmcheckversion.js",
     "preinstall": "npm run npmcheckversion",
     "postinstall": "npm run build",
-    "prebuild": "if [ \"$NODE_ENV\" = \"production\" ]; then npm run build:clean; else npm run build:clean && npm run test; fi",
+    "prebuild": "if [ \"$NODE_ENV\" = \"production\" ]; then npm run build:clean; else npm run build:clean; fi",
     "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p",
     "build:clean": "npm run test:clean && rimraf ./build",
     "build:dll": "node ./internals/scripts/dependencies.js",
@@ -194,9 +194,10 @@
     "lodash": "4.15.0",
     "react": "15.3.0",
     "react-dom": "15.3.0",
+    "react-ga": "^2.1.2",
     "react-helmet": "3.1.0",
-    "react-redux": "4.4.5",
     "react-intl": "2.1.3",
+    "react-redux": "4.4.5",
     "react-router": "2.6.1",
     "react-router-redux": "4.0.5",
     "react-router-scroll": "0.2.1",
