--- a/package.json
+++ b/package.json
@@ -281,6 +281,7 @@
     "postcss-reporter": "1.4.1",
     "pre-commit": "1.1.3",
     "psi": "2.0.4",
+    "react-addons-test-utils": "^15.3.0",
     "rimraf": "2.5.4",
     "shelljs": "0.7.3",
     "sinon": "2.0.0-pre",
