--- a/package.json
+++ b/package.json
@@ -191,6 +191,7 @@
   "dependencies": {
     "babel-polyfill": "6.13.0",
     "chalk": "1.1.3",
+    "cleave.js": "^0.7.15",
     "compression": "1.6.2",
     "express": "4.14.0",
     "fontfaceobserver": "2.0.1",
