--- a/package.json
+++ b/package.json
@@ -203,6 +203,7 @@
     "lodash": "4.15.0",
     "react": "15.3.0",
     "react-dom": "15.3.0",
+    "react-dropzone": "^3.11.0",
     "react-ga": "^2.1.2",
     "react-helmet": "3.1.0",
     "react-intl": "2.1.3",
