--- a/package.json
+++ b/package.json
@@ -217,6 +217,7 @@
     "reselect": "2.5.3",
     "sanitize.css": "4.1.0",
     "styled-components": "^1.4.3",
+    "validate.js": "^0.11.1",
     "warning": "3.0.0",
     "whatwg-fetch": "1.0.0"
   },
